--- a/style.css
+++ b/style.css
@@ -56,3 +56,10 @@ h1 {
   text-decoration: underline;
   margin-top: 450px;
 }
+footer{
+    text-decoration: dashed;
+    color: rgb(255, 255, 255);
+    text-align: center;
+    font-size: medium;
+    width: 750px;
+}
